<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText android:id="@+id/et_content"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/et_content"/>
    </android.support.design.widget.TextInputLayout>
    <TextView android:id="@+id/tv_content"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>
    <Button android:id="@+id/btn_save_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="click"
            android:text="@string/btn_save_file"/>
    <Button android:id="@+id/btn_read_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="click"
            android:text="@string/btn_read_file"/>
</LinearLayout>